--- a/.github/workflows/jekylltest.yml
+++ b/.github/workflows/jekylltest.yml
@@ -17,20 +17,20 @@ jobs:
     - uses: actions/checkout@v3
     # Install Node.js
     - uses: actions/setup-node@v2-beta
-        with:
-          node-version: '14'
+      with:
+        node-version: '14'
           
     # Install npm dependencies
     # (similar to npm install)
     - run: npm ci
-    # Run code to build the site files inside the `big-island-buses` folder
+    # Run code to build the site files inside the `Research_Technology_Bioinformatics` folder
     - run: npm run build
     
     # Checkout the `main` branch
     - uses: actions/checkout@v3
       with:
         ref: main
-      # Put the checked out files inside the `big-island-buses/heleon` folder
+      # Put the checked out files inside the `Research_Technology_Bioinformatics/testdeploy` folder
       path: main/testdeploy
           clean: false
       # Delete the .git folder from `Research_Technology_Bioinformatics/testdeploy`
