--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
 title: [Research Technology Bioinformatics]
-description: [A Series of Tufts University Research Technology Workshops]
+description: [Tools for Life Science]
 
 plugins:
   - jekyll-relative-links
